fix(menu-engineering): review fixes — extract JPA to infra adapter, add event handler tests, remove dead exception